--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 	},
 	"dependencies": {
 		"@babel/runtime": "^7.4.3",
+		"core-js": "^3.1.3",
 		"react": "^16.8.6",
 		"react-native": "^0.59.9",
 		"react-native-fs": "^2.13.3",
